<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#54B3E5FC"
        >

        <Space
            android:layout_height="78dp"
            android:layout_width="match_parent"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Walk-In Clinic"
            android:textAllCaps="true"
            android:textColor="#E21F83B1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:selectAllOnFocus="true"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="24dp"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            android:hint="Password"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:imeOptions="actionDone"
            />

        <Space
            android:layout_height="30dp"
            android:layout_width="match_parent"
            />

        <Button
            android:id="@+id/signIn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:onClick="checkLogin"
            android:text="Sign In" />

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="#2481AC"
            android:textAllCaps="false"
            android:text="Don't have an account? Register"
            android:id="@+id/register"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

    </LinearLayout>

</RelativeLayout>